--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.5",
     "sass": "^1.70.0"
   },
   "devDependencies": {
