--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "swapy": "^0.4.2",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
