--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.2.2",
     "next": "^14.2.3",
     "next-themes": "^0.2.1",
