--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_VERSION=2.4.36
-NEXT_PUBLIC_API_URL=https://kepler-planner-backend-production.up.railway.app
+NEXT_PUBLIC_VERSION=2.5.0
+NEXT_PUBLIC_API_URL=http://localhost:5555
