--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.2.2",
     "next": "^14.2.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
