--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_VERSION=2.5.0
-NEXT_PUBLIC_API_URL=http://localhost:5555
+NEXT_PUBLIC_API_URL=https://kepler-planner-backend-production-3cea.up.railway.app
